--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div class="mb-3 text-center">
                         <button type="submit" class="btn btn-primary">Enviar</button>
                     </div>
+                    <div id="formResult" class="form-text text-center"></div>
                 </form>
             </div>
         </div>
