--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
    
     <script type = "text/javascript" src="./js/validar.js" defer></script> 
@@ -51,9 +54,9 @@
                         <div id="inputResult" class="form-text"></div>
                     </div>
                     <div class="mb-3 text-center">
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button id="submitButton" type="submit" class="btn btn-primary">Enviar</button>
                     </div>
-                    <div id="formResult" class="form-text text-center"></div>
+                    <div id="formResult" class="form-text text-center"></div>Dados registrados com sucesso!
                 </form>
             </div>
         </div>
