--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
                 <form id="singleForm" action="javascript:void(0);">
                     <div class="mb-3">
                         <label for="inputName" class="form-label">Primeiro Nome</label>
-                        <input type="text" class="form-control" id="inputName" required>
+                        <input type="text" class="form-control" id="inputName" >
                         <div id="inputNameHelp" class="form-text"></div>
                     </div>
                     <div class="mb-3">
                         <label for="inputYear" class="form-label">Ano de Nascimento</label>
-                        <input type="text" class="form-control" id="inputYear" required>
+                        <input type="text" class="form-control" id="inputYear" >
                         <div id="inputYearHelp" class="form-text"></div>
                     </div>
                     <div class="mb-3">
                         <label for="inputEmail" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" required>
+                        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" >
                         <div id="inputEmailHelp" class="form-text"></div>
                     </div>
                     <div class="mb-3">
                         Senha   <label for="inputPassword" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="inputPassword" required>
+                        <input type="password" class="form-control" id="inputPassword" >
                         <input type="checkbox" id="showPassword"> Mostrar senha
                         <meter id="passStrengthMeter" low="11" high="21" min="0" max="30" optimum="30" value="0"
                             style="width: 100%;"></meter>
