Editar campo input

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="mb-3 text-center">
                         <button id="submitButton" type="submit" class="btn btn-primary">Enviar</button>
                     </div>
-                    <div id="formResult" class="form-text text-center"></div>Dados registrados com sucesso!
+                    <div id="inputResult" class="form-text text-center"></div>
                 </form>
             </div>
         </div>
