--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="inputEmail" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" >
+                        <input type="text" class="form-control" id="inputEmail" aria-describedby="emailHelp" >
                         <div id="inputEmailHelp" class="form-text"></div>
                     </div>
                     <div class="mb-3">
