Senha forte qtd values

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div id="inputEmailHelp" class="form-text"></div>
                     </div>
                     <div class="mb-3">
-                        Senha   <label for="inputPassword" class="form-label">Senha</label>
+                        <label for="inputPassword" class="form-label">Senha</label>
                         <input type="password" class="form-control" id="inputPassword" >
                         <input type="checkbox" id="showPassword"> Mostrar senha
                         <meter id="passStrengthMeter" low="11" high="21" min="0" max="30" optimum="30" value="0"
